--- a/app/globals.css
+++ b/app/globals.css
@@ -62,14 +62,16 @@ body {
 
 :root {
   --radius: 0.625rem;
-  --background: oklch(1 0 0);
-  --foreground: oklch(0.147 0.004 49.25);
-  --card: oklch(1 0 0);
-  --card-foreground: oklch(0.147 0.004 49.25);
-  --popover: oklch(1 0 0);
-  --popover-foreground: oklch(0.147 0.004 49.25);
-  --primary: oklch(0.216 0.006 56.043);
-  --primary-foreground: oklch(0.985 0.001 106.423);
+  /* --background: oklch(1 0 0); */
+  --background: oklch(91.48% 0.00685 67.4);
+  --foreground: oklch(35.373% 0.04383 206.86);
+  /* --foreground: oklch(0.147 0.004 49.25); */
+  --card: oklch(91.48% 0.00685 67.4);
+  --card-foreground: oklch(35.373% 0.04383 206.86);
+  --popover: oklch(91.48% 0.00685 67.4);
+  --popover-foreground: oklch(35.373% 0.04383 206.86);
+  --primary: oklch(35.373% 0.04383 206.86);
+  --primary-foreground: oklch(91.48% 0.00685 67.4);
   --secondary: oklch(0.97 0.001 106.424);
   --secondary-foreground: oklch(0.216 0.006 56.043);
   --muted: oklch(0.97 0.001 106.424);
@@ -85,10 +87,10 @@ body {
   --chart-3: oklch(0.398 0.07 227.392);
   --chart-4: oklch(0.828 0.189 84.429);
   --chart-5: oklch(0.769 0.188 70.08);
-  --sidebar: oklch(0.985 0.001 106.423);
-  --sidebar-foreground: oklch(0.147 0.004 49.25);
-  --sidebar-primary: oklch(0.216 0.006 56.043);
-  --sidebar-primary-foreground: oklch(0.985 0.001 106.423);
+  --sidebar: oklch(91.48% 0.00685 67.4);
+  --sidebar-foreground: oklch(35.373% 0.04383 206.86);
+  --sidebar-primary: oklch(35.373% 0.04383 206.86);
+  --sidebar-primary-foreground: oklch(91.48% 0.00685 67.4);
   --sidebar-accent: oklch(0.97 0.001 106.424);
   --sidebar-accent-foreground: oklch(0.216 0.006 56.043);
   --sidebar-border: oklch(0.923 0.003 48.717);
@@ -96,11 +98,12 @@ body {
 }
 
 [data-theme="dark"] {
-  --background: oklch(0.147 0.004 49.25);
+  /* --background: oklch(0.147 0.004 49.25); */
+  --background: oklch(20.342% 0.02876 187.266);
   --foreground: oklch(0.985 0.001 106.423);
-  --card: oklch(0.216 0.006 56.043);
+  --card: oklch(20.342% 0.02876 187.266);
   --card-foreground: oklch(0.985 0.001 106.423);
-  --popover: oklch(0.216 0.006 56.043);
+  --popover: oklch(20.342% 0.02876 187.266);
   --popover-foreground: oklch(0.985 0.001 106.423);
   --primary: oklch(0.923 0.003 48.717);
   --primary-foreground: oklch(0.216 0.006 56.043);
